# silver-computing-machine

./: .gitignore  EQ.latex  LICENSE  MNIST.keras  MNIST_Transformed.keras  MNIST_only_interpolant.keras  PATCHsymbolic_expression_from_maxima_string  README  activationlist.csv  ai-paper  amd_get_tf_rocm.sh  amd_sync.sh  cpu_sync.sh  dgbtest.py  env  finaltest.py  findings.txt  gcccommand  imagenet1000_clsidx_to_labels.json  intel_sync.sh  launch.json  main.py  maths.py  mnist.py  mnist_helper.py  model_test_list_image_classifier.csv  nn_poly  nn_test.c  nn_test.h  nonlinear-tolinearproof  nvidia_sync.sh  out.csv  out.dvi  out.fdb_latexmk  out.fls  out.tex  output.txt  polyspline.sobj  profile.sh  profiling_test_results  (+18 more)
SilverBullet/: Manifest.toml  Project.toml
SilverBullet/src/: SilverBullet.jl
cache.gpflow/: fingerprint.pb  saved_model.pb
cache.gpflow/variables/: variables.data-00000-of-00001  variables.index
emperors-new-noesis/: meson.build
emperors-new-noesis/src/: main.cpp
opencv-kernels/playground/: CGuass.h  CMakeCache.txt  CMakeLists.txt  HelloOpenCL  Main.c  Makefile  cmake_install.cmake  err_code.h  meson.build  numpyarray.py
src/: __init__.py  cech_algorithm.py  meterns.py  model_extractor.py  symbolics.py  testing_and_output.py  training.py
src/fast_bspline_eval/: scratch.py
