[project]
name = "clean-silver-computing-machine"
version = "0.1.0"
description = "AI research project using topology"
readme = "README.md"
requires-python = ">=3.11.11"
license = "GPL"
dependencies = [
    "jax",
    "scipy",
    "pandas",
    "matplotlib",
    "torch",
    "tensorboard",
    "torchvision",
    "pytorch-triton-rocm ; sys_platform == 'linux'",
    "scikit-image",
    "opencv-contrib-python",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true

