[project]
name = "clean-silver-computing-machine"
version = "0.1.0"
description = "AI research project using topology"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL"
dependencies = [
    "jax",
    "scipy",
    "pandas",
    "matplotlib",
    "tensorboard",
    "scikit-image",
    "opencv-contrib-python",
    "h5py", # downloading repos
    "gdown"
]

[project.optional-dependencies]
cpu=[
  "torch",
  "torchvision",
]
amd=[
  "torch",
  "torchvision",
  "triton"
]
nvidia=[
    "torch",
    "torchvision"
]
intel=[
    "torch",
    "torchvision",
    "pytorch-triton-xpu"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "nvidia" },
    { extra = "intel" },
    { extra = "amd" },
  ],
]

[tool.uv.sources]
torch= [
  { index = "pytorch-cu130", extra="nvidia"},
  { index = "torch-cpu", extra="cpu"},
  { index = "pytorch-xpu", extra="intel"},
  { index = "pytorch-rocm", extra="amd" },
]
triton = [
  { index = "pytorch-rocm",  extra="amd" },
]
torchvision=  [
    { index = "torch-cpu", extra="cpu" },
    { index = "pytorch-cu130", 
          extra = "nvidia" },
    { index = "pytorch-rocm", extra="amd" },
    { index = "pytorch-xpu", extra="intel"},
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra="intel"},
]
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/"
explicit = true 

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true


