[project]
name = "clean-silver-computing-machine"
version = "0.1.0"
description = "AI research project using topology"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL"
dependencies = [
    "jax",
    "scipy",
    "pandas",
    "matplotlib",
    "tensorboard",
    "scikit-image",
    "h5py", # downloading repos
    "gdown"
]

[project.optional-dependencies]
cpu=[
  "torch",
  "torchvision",
]
amd=[
  "torch",
  "torchvision",
  "triton-rocm",
  "pytorch-triton-rocm"  
]
nvidia=[
    "torch",
    "torchvision",
]
intel=[
    "torch",
    "torchvision",
    "pytorch-triton-xpu"
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "nvidia" },
    { extra = "intel" },
    { extra = "amd" },
  ],
]

[tool.uv.sources]
torch= [
  { index = "pytorch-cu130",  marker = "sys_platform == 'win32' or sys_platform == 'linux'", extra="nvidia"},
  { index = "torch-cpu",  marker = "sys_platform == 'win32' or sys_platform == 'linux'", extra="cpu"},
  { index = "pytorch-xpu",  marker = "sys_platform == 'win32' or sys_platform == 'linux'", extra="intel"},
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'", extra="amd" },
]
pytorch-triton-rocm= [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'", extra="amd" },
]
triton-rocm= [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'", extra="amd" },
]
torchvision=  [
    { index = "torch-cpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'", extra="cpu" },
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'",
          extra = "nvidia" },
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'", extra="amd" },
    { index = "pytorch-xpu",  marker = "sys_platform == 'win32' or sys_platform == 'linux'" ,  extra="intel"},
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu",  marker = "sys_platform == 'win32' or sys_platform == 'linux'" , extra="intel"},
]
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
explicit = true 

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true


